java assignments/projects/runnerB/RunnerB/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_05\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x64)\BlueJ\lib\bluejcore.jar;C:\Program Files (x64)\BlueJ\lib\junit-4.8.2.jar;C:\FunctionalJava\code\fpij.jar;C:\Runners\RunnerB\RunnerB
-d
C:\Runners\RunnerB\RunnerB\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x64)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Runners\RunnerB\RunnerB\Reader1.java
<---- end of javadoc command ---->
Loading source file C:\Runners\RunnerB\RunnerB\Reader1.java...
C:\Runners\RunnerB\RunnerB\Reader1.java:31: error: ')' expected
                      System.println();
                                      ^
C:\Runners\RunnerB\RunnerB\Reader1.java:31: error: ';' expected
                      System.println();
                                       ^
C:\Runners\RunnerB\RunnerB\Reader1.java:32: error: illegal start of expression
                    scan.close();
                        ^
C:\Runners\RunnerB\RunnerB\Reader1.java:32: error: ';' expected
                    scan.close();
                              ^
4 errors
